ops-network-routetable.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Create VPC Resource
Parameters:
  VpcId:
    Type: String
  InternetGateway:
    Type: String
  NatGateway1:
    Type: String
  NatGateway2:
    Type: String
  DMZSubnet1:
    Type: String
  DMZSubnet2:
    Type: String
  PrivateSubnet1:
    Type: String
  PrivateSubnet2:
    Type: String
  TagName:
    Type: String
Resources:
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref TagName, PublicRouteTable]]
  PrivateRouteTableAZ1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref TagName, PrivateRouteTableAZ1]]
  PrivateRouteTableAZ2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Join ['-',[!Ref TagName, PrivateRouteTableAZ2]]
  PrivateRouteAZ1toPublic:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
      RouteTableId: !Ref PrivateRouteTableAZ1
  PrivateRouteAZ2toPublic:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2
      RouteTableId: !Ref PrivateRouteTableAZ2
  DMZRouteAZ1toPublic:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableAZ1
      SubnetId: !Ref PrivateSubnet1
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableAZ2
      SubnetId: !Ref PrivateSubnet2
  DMZSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref DMZSubnet1
  DMZSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref DMZSubnet2
Outputs:
  PublicRouteTable:
    Value: !Ref PublicRouteTable
    Description: The PublicRoute Table
  PrivateRouteTableAZ1:
    Value: !Ref PrivateRouteTableAZ1
    Description: The PrivateRouteTableAZ1
  PrivateRouteTableAZ2:
    Value: !Ref PrivateRouteTableAZ2
    Description: The PrivateRouteTableAZ2
